Changed: Font style, two light card colors changed to increase legibility. Fixed: Custom hex color input's position. Added: A default fake data to see how actually charts work, Notes: Current bar chart isn't working properly; will be fixed.

--- a/src/CSS-Files/CreateCard.css
+++ b/src/CSS-Files/CreateCard.css
@@ -13,7 +13,7 @@
 
 .create-card input, select {
     padding-left: 0.5rem;
-    margin-top: 1rem;
+    
     color: rgb(255, 255, 255);
 }
 
